static/css/header.css
header {
	font-family: akzidenz-grotesk,akzidenz-grotesk,helvetica,sans-serif;
}
/* =============================
	Desktop nav
============================= */
#logo-header {
	width: 85px;
}
#nav-top {
	font-size: 0.6rem;
	font-weight: 500;
	border-bottom: 1px solid #333;
}
#nav-top-inner {
	color: #777;
}
#nav-top-inner a:hover {
	color: #cc092f;
}
#nav-second {
	font-size: 0.7rem;
}

/* == Dropdown anchor == */
@media(min-width: 1281px) {
	#nav-second-inner .nav-item {
    	padding: 0 2.5rem !important;
    }
}
#nav-second-inner .nav-item:hover .nav-link {
	color: #cc092f !important;
}
#nav-second-inner li:hover .nav-link > span:before {
	height: 4px;
}
#nav-second-inner li span:before {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    height: 0;
    width: 100%;
    background: #cc092f;
    backface-visibility: hidden;
    transition: height .25s cubic-bezier(.4,.01,.1,1);
}


/* == Dropdown == */
#nav-second-inner .dropdown-menu {
	background-color: #efefef;
	z-index: -1;
}
.dropdown .dropdown-menu {
	margin-top: -100% !important;
	display: block;

    -moz-transition: all 1s;
    -webkit-transition: all 1s;
    transition: all 1s;
}
.dropdown:hover .nav-link + .dropdown-menu {
   margin-top: 0 !important;
}
.dropdown:hover li {
	color: #cc092f !important;
}
.dropdown-product-categories {
	border-bottom: 1px solid #dcdcdc;
}
.border-left {
	border-left: 1px solid #444;
}
.dropdown-product-categories .row .col-lg-2 {
	border-right: 1px solid #dcdcdc;
}
.dropdown-product-categories .row .col-lg-2:last-child {
	border-right: none;
}
.dropdown-product-categories a div:nth-child(2) {
	border-bottom: 2px solid #cc092f;
    -webkit-transition: width 0.5s;
    transition: width 0.5s;
}
.dropdown-product-categories a div:nth-child(2) {
	width: 10% !important;
}
.dropdown-product-categories a:hover div:nth-child(2) {
	width: 15% !important;
}
.dropdown-product-categories a div:nth-child(1) {
    -moz-transition: all 0.4s;
    -webkit-transition: all 0.4s;
    transition: all 0.4s;
}
.dropdown-product-categories a:hover div:nth-child(1) {
	padding-bottom: 0.5rem !important;
	padding-top: 0 !important;
}
.dropdown-submenu .row .col-lg-3 a div,
.dropdown-submenu .row .col-lg-6 a div,
a .bg-zoom {
	background-position: center center;
	background-size: 110% 110%;

	-moz-transition: all 0.3s;
	-webkit-transition: all 0.3s;
	transition: all 0.3s;
}
.dropdown-submenu .row .col-lg-3 a:hover div,
.dropdown-submenu .row .col-lg-6 a:hover div,
a:hover .bg-zoom {
	background-size: 100% 100%;
}
.dropdown-submenu .row .col-lg-3 a:hover .d-flex.align-items-center.h-100 {
	background-color: rgba(0, 0, 0, 0.3);
}
#nav-second .btn-group button:first-child {
	line-height: 1;
}
#nav-second .btn-group button:last-child {
	margin-left: .1rem;
}


/* ==================================
	Mobile nav
================================== */
#mobile-header .navbar ul li button:hover,
#mobile-header .navbar ul li button:focus  {
	background-color: #191919 !important;
	box-shadow: none;
}
#logo-header-mobile {
	width: 150px;
}
#mobile-collapse {
	overflow-y: scroll;
	max-height: 90vh;
}
#mobile-collapse #mobile-menu-accordion li .nav-link,
#mobile-collapse #mobile-menu-accordion-submenu ul:first-child {
	border-bottom: 1px solid #292929 !important;
}
#search-modal input:focus {
	box-shadow: none;
}
.mobile-nav-icon {
	font-size: 1.5rem;
}
.cart-count {
	right: 5.4rem;
	top: 1.1rem;
}
#logo-header-mobile {
	max-width: 8rem;
}
@media (min-width: 576px) {
	.mobile-nav-icon {
		font-size: 2rem;
	}
	.cart-count {
		right: 2.6rem;
		top: 1.5rem;
	}
	#logo-header-mobile {
		max-width: none;
	}
}

